# devflow

./: .agentignore  .dockerignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.devflow  Makefile  README.md  adr-0001-command-contract.json  adr-0002-cache-strategy.json  adr-0003-dynamic-extension-wiring.json  adr-0004-hardened-container-infrastructure.json  adr-0005-vulnerability-scanning-strategy.json  architecture.json  brainstorm-implementation.json  brainstorm-re-architecture.json  ci-workflows.json  ci.json  coding-standards.json  command-model.json  commands.json  config.json  configuration.json  container-execution.json  contributing.json  custom-extensions.json  developer-index.json  devflow.toml  docker-bake.hcl  dogfooding.json  extensions.json  features.json  getting-started.json  glossary.json  index-1.json  index-2.json  index.html  index.json  (+25 more)
.codex/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security-incident.yml
.github/workflows/: ci.yml  docs.yml  release.yml
adr-0001-command-contract/: index.html
adr-0002-cache-strategy/: index.html
adr-0003-dynamic-extension-wiring/: index.html
adr-0004-hardened-container-infrastructure/: index.html
adr-0005-vulnerability-scanning-strategy/: index.html
architecture/: index.html
brainstorm-implementation/: index.html
brainstorm-re-architecture/: index.html
ci/: index.html
ci-workflows/: index.html
coding-standards/: index.html
command-model/: index.html
commands/: index.html
configuration/: index.html
container-execution/: index.html
contributing/: index.html
crates/devflow-cli/: Cargo.toml
crates/devflow-cli/resources/: Dockerfile.node  Dockerfile.rust  kotlin.toml  node.toml  rust.toml  tsc.toml
crates/devflow-cli/src/: discovery.rs  executor.rs  init.rs  main.rs  styles.rs
crates/devflow-core/: Cargo.toml
crates/devflow-core/benches/: config_bench.rs
crates/devflow-core/src/: command.rs  config.rs  constants.rs  extension.rs  fingerprint.rs  lib.rs  project.rs  runtime.rs
crates/devflow-core/src/extension/: subprocess.rs
crates/devflow-ext-node/: Cargo.toml
crates/devflow-ext-rust/: Cargo.toml
crates/devflow-gh/: Cargo.toml
crates/devflow-policy/: Cargo.toml
custom-extensions/: index.html
developer-index/: index.html
docs/: abbreviations.yml  index.md  myst.yml  reference.md  toc.yml  v0.1.0-architecture-and-design-review.md  verification.md
docs/developer-guide/: index.md
docs/reference/: brainstorm-implementation.md  brainstorm-re-architecture.md  v0.1.0-ci-container-redesign.md  v0.1.0-critical-review.md  v0.1.0-implementation-execution-plan.md  v0.1.0-platform-migration-decision.md
dogfooding/: index.html
extensions/: index.html
features/: index.html
getting-started/: index.html
glossary/: index.html
index-1/: index.html
index-2/: index.html
installation/: index.html
local-dev/: index.html
multi-stack/: index.html
new-stacks/: index.html
overview/: index.html
quickstart/: index.html
reference/: index.html
references/: index.html
rustdoc/: crates.js  help.html  settings.html  src-files.js
security-and-hardening/: index.html
swot-analysis/: index.html
troubleshooting/: index.html
troubleshooting-1/: index.html
user-index/: index.html
v0-1-0-ci-container-redesign/: index.html
v0-1-0-critical-review/: index.html
v0-1-0-implementation-execution-plan/: index.html
v0-1-0-platform-migration-decision/: index.html
workflow/: index.html
workflow-model/: index.html
writing-extensions/: index.html
(+325 files in other folders)
