[package]
name = "devflow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "dwf"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
devflow-core = { path = "../devflow-core" }
devflow-policy = { path = "../devflow-policy" }
devflow-gh = { path = "../devflow-gh" }
serde = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
