[package]
name = "devflow-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true

serde_json = "1.0"
tracing = "0.1"
sha2 = "0.10.9"
hex = "0.4.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.26.0"

[[bench]]
name = "config_bench"
harness = false
